--- a/themes/bix/style.css
+++ b/themes/bix/style.css
@@ -3498,7 +3498,97 @@ strong {
   position: absolute;
   width: 95%;
   height: 80%;
-  padding: 1rem; }
+  padding: 1rem;
+  position: relative; }
+  .unlock-download-modal i.fa-close, .start-download-modal i.fa-close, .thankyou-modal i.fa-close {
+    position: absolute;
+    top: 0;
+    right: 0;
+    margin: 1rem;
+    font-size: 1.5rem; }
+    .unlock-download-modal i.fa-close:hover, .start-download-modal i.fa-close:hover, .thankyou-modal i.fa-close:hover {
+      cursor: pointer;
+      color: white;
+      transform: scale(1.3); }
+
+.download-later-button {
+  cursor: pointer;
+  color: #fff;
+  text-decoration: none;
+  border: solid #fff 2px;
+  border-radius: 30px;
+  background-color: #70b3cb;
+  font-weight: 500;
+  font-size: 1.1rem;
+  transition: all ease 0.4s;
+  padding: 0.5rem 3rem; }
+  .download-later-button:hover {
+    color: #70b3cb;
+    border: solid #70b3cb 2px;
+    background-color: #fff; }
+
+.unlock-download-modal {
+  background: #F9AC31; }
+  .unlock-download-modal .unlock-download-modal-wrapper {
+    display: -ms-flexbox;
+    display: flex;
+    -ms-flex-align: center;
+        align-items: center;
+    -ms-flex-pack: center;
+        justify-content: center;
+    -ms-flex-flow: column nowrap;
+        flex-flow: column nowrap;
+    width: 100%;
+    height: 100%; }
+  .unlock-download-modal h2 {
+    text-align: center;
+    color: white;
+    font-family: "Titillium Web", sans-serif;
+    font-size: 2.5rem;
+    font-weight: 400;
+    border: 3px solid white;
+    border-width: 3px 0;
+    margin-bottom: 0; }
+  .unlock-download-modal p {
+    font-family: "Titillium Web", sans-serif;
+    color: white;
+    font-size: 1.2rem; }
+  .unlock-download-modal form {
+    display: -ms-flexbox;
+    display: flex;
+    -ms-flex-align: center;
+        align-items: center;
+    -ms-flex-flow: column nowrap;
+        flex-flow: column nowrap;
+    width: 80%;
+    max-width: 500px; }
+    .unlock-download-modal form input {
+      width: 100%;
+      border-radius: 0;
+      height: 50px; }
+    .unlock-download-modal form button {
+      color: #fff;
+      text-decoration: none;
+      border: solid #fff 2px;
+      border-radius: 30px;
+      background-color: #70b3cb;
+      font-weight: 500;
+      font-size: 1.1rem;
+      transition: all ease 0.4s;
+      box-shadow: none;
+      text-shadow: none;
+      padding: 0.5rem 3rem;
+      margin: 1rem; }
+      .unlock-download-modal form button:hover {
+        color: #70b3cb;
+        border: solid #70b3cb 2px;
+        background-color: #fff; }
+
+.start-download-modal {
+  background: white; }
+
+.thankyou-modal {
+  background: #444444; }
 
 @media all and (min-width: 600px) {
   .unlock-download-modal, .start-download-modal, .thankyou-modal {
