--- a/themes/bix/style.css
+++ b/themes/bix/style.css
@@ -3292,22 +3292,8 @@ strong {
 
 .highlight-modal {
   text-align: center;
-  background: #F9AC31;
+  background: #70b3cb;
   position: relative; }
-  .highlight-modal .side-modal-1 {
-    position: absolute;
-    width: 5%;
-    height: 100%;
-    left: 0;
-    top: 0;
-    background-color: #444444; }
-  .highlight-modal .side-modal-2 {
-    position: absolute;
-    width: 5%;
-    height: 100%;
-    right: 0;
-    top: 0;
-    background-color: #444444; }
   .highlight-modal .highlight-modal-wrapper {
     display: -ms-flexbox;
     display: flex;
@@ -3320,7 +3306,7 @@ strong {
     .highlight-modal .highlight-modal-wrapper .img-wrapper {
       width: 100%;
       height: 50%;
-      background: #F9AC31;
+      background: #70b3cb;
       margin-top: 20px; }
       .highlight-modal .highlight-modal-wrapper .img-wrapper img {
         max-width: 500px;
@@ -3392,7 +3378,11 @@ strong {
   .comment-modal .img-wrapper {
     width: 75%;
     height: 50%;
-    background: white; }
+    background: #70b3cb; }
+    .comment-modal .img-wrapper img {
+      max-width: 500px;
+      display: block;
+      margin: 0 auto; }
   .comment-modal .comment-section-link {
     color: #fff;
     text-decoration: none;
@@ -3410,22 +3400,8 @@ strong {
       background-color: #fff; }
 
 .download-modal {
-  background: #F9AC31;
+  background: #70b3cb;
   position: relative; }
-  .download-modal .side-modal-1 {
-    position: absolute;
-    width: 5%;
-    height: 100%;
-    left: 0;
-    top: 0;
-    background-color: #444444; }
-  .download-modal .side-modal-2 {
-    position: absolute;
-    width: 5%;
-    height: 100%;
-    right: 0;
-    top: 0;
-    background-color: #444444; }
   .download-modal .download-modal-wrapper {
     display: -ms-flexbox;
     display: flex;
@@ -3449,7 +3425,7 @@ strong {
   .download-modal .img-wrapper {
     width: 75%;
     height: 50%;
-    background: #F9AC31;
+    background: #70b3cb;
     padding: 0px; }
     .download-modal .img-wrapper img {
       width: 100px;
