--- a/themes/bix/sass/_modal.scss
+++ b/themes/bix/sass/_modal.scss
@@ -212,7 +212,6 @@
             height: 100%;
         }
         h2 {
-            //text-transform: uppercase;
             text-align: center;
             color: white;
             font-family: $font__header;
@@ -249,6 +248,42 @@
     }
     .start-download-modal {
         background: white;
+        .start-download-modal-wrapper {
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            flex-flow: column nowrap;
+            width: 100%;
+            height: 100%;
+        }
+        h2 {
+            text-align: center;
+            color: $color__gray;
+            font-family: $font__header;
+            font-size: 2rem;
+            font-weight: 400;
+            margin-bottom: 0;
+        }
+        p {
+            font-family: $font__header;
+            color: $color__gray;
+            font-size: 1.2rem;
+            .blue-highlight {
+              color: $color__blue;
+              font-weight: bold;
+            }
+        }
+        i.fa-download {
+          font-size: 4rem;
+          color: $color__blue;
+        }
+        button {
+          @include btn;
+          box-shadow: none;
+          text-shadow: none;
+          padding: 0.5rem 3rem;
+          margin: 1rem;
+        }
     }
     .thankyou-modal {
         background: #ffffff;
