--- a/themes/bix/style.css
+++ b/themes/bix/style.css
@@ -3316,6 +3316,51 @@ strong {
 
 .start-download-modal {
   background: white; }
+  .start-download-modal .start-download-modal-wrapper {
+    display: -ms-flexbox;
+    display: flex;
+    -ms-flex-align: center;
+        align-items: center;
+    -ms-flex-pack: center;
+        justify-content: center;
+    -ms-flex-flow: column nowrap;
+        flex-flow: column nowrap;
+    width: 100%;
+    height: 100%; }
+  .start-download-modal h2 {
+    text-align: center;
+    color: #444444;
+    font-family: "Titillium Web", sans-serif;
+    font-size: 2rem;
+    font-weight: 400;
+    margin-bottom: 0; }
+  .start-download-modal p {
+    font-family: "Titillium Web", sans-serif;
+    color: #444444;
+    font-size: 1.2rem; }
+    .start-download-modal p .blue-highlight {
+      color: #70b3cb;
+      font-weight: bold; }
+  .start-download-modal i.fa-download {
+    font-size: 4rem;
+    color: #70b3cb; }
+  .start-download-modal button {
+    color: #fff;
+    text-decoration: none;
+    border: solid #fff 2px;
+    border-radius: 30px;
+    background-color: #70b3cb;
+    font-weight: 500;
+    font-size: 1.1rem;
+    transition: all ease 0.4s;
+    box-shadow: none;
+    text-shadow: none;
+    padding: 0.5rem 3rem;
+    margin: 1rem; }
+    .start-download-modal button:hover {
+      color: #70b3cb;
+      border: solid #70b3cb 2px;
+      background-color: #fff; }
 
 .thankyou-modal {
   background: #ffffff; }
