--- a/themes/bix/sass/_modal.scss
+++ b/themes/bix/sass/_modal.scss
@@ -118,7 +118,7 @@
     .download-modal {
        background: $color__blue;
        position: relative;
-       
+
        .download-modal-wrapper {
            display: flex;
            align-items: center;
@@ -251,7 +251,39 @@
         background: white;
     }
     .thankyou-modal {
-        background: $color__gray;
+        background: #ffffff;
+          .thankyou-modal-wrapper {
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            width: 100%;
+            height: 100%;
+            flex-flow: column nowrap;
+
+             img {
+               max-width: 50%;
+             }
+
+
+              .thank-you-modal-title {
+                font-family: $font__header;
+                font-size: 2rem;
+                color: #ffffff;
+              }
+
+             .thank-you-font {
+               font-family: $font__main;
+               font-size: 1rem;
+               color: $color__text-main;
+             }
+
+             .thank-you-button {
+               @include btn;
+               padding: 0.5rem 3rem;
+               margin: 1rem;
+               cursor: pointer;
+             }
+        }
     }
 //breakpoints
     @media all and (min-width: 600px) {
