--- a/themes/bix/style.css
+++ b/themes/bix/style.css
@@ -2993,42 +2993,6 @@ strong {
   .icons {
     left: 40px; } }
 
-.dd-modal {
-  background-color: #F9AC31;
-  text-align: center;
-  display: none; }
-  .dd-modal .dd-modal-wrap {
-    display: -ms-flexbox;
-    display: flex;
-    -ms-flex-align: center;
-        align-items: center;
-    width: 100%;
-    height: 100%;
-    -ms-flex-flow: column nowrap;
-        flex-flow: column nowrap; }
-    .dd-modal .dd-modal-wrap .dd-modal-title {
-      font-family: "Titillium Web", sans-serif;
-      font-size: 2rem; }
-    .dd-modal .dd-modal-wrap .dd-modal-h5 {
-      font-family: "Roboto", sans-serif;
-      font-size: 1rem; }
-    .dd-modal .dd-modal-wrap .dd-button {
-      color: #fff;
-      text-decoration: none;
-      border: solid #fff 2px;
-      border-radius: 30px;
-      background-color: #70b3cb;
-      font-weight: 500;
-      font-size: 1.1rem;
-      transition: all ease 0.4s;
-      padding: 0.5rem 3rem;
-      margin: 1rem;
-      cursor: pointer; }
-      .dd-modal .dd-modal-wrap .dd-button:hover {
-        color: #70b3cb;
-        border: solid #70b3cb 2px;
-        background-color: #fff; }
-
 /*--------------------------------------------------------------
 # 404 page
 --------------------------------------------------------------*/
@@ -3055,44 +3019,6 @@ strong {
     color: #70b3cb;
     border: solid #70b3cb 2px;
     background-color: #fff; }
-
-.thank-you-modal {
-  background-color: #F9AC31;
-  text-align: center;
-  display: none; }
-  .thank-you-modal .thank-you-modal-wrapper {
-    display: -ms-flexbox;
-    display: flex;
-    -ms-flex-align: center;
-        align-items: center;
-    width: 100%;
-    height: 100%;
-    -ms-flex-flow: column nowrap;
-        flex-flow: column nowrap; }
-    .thank-you-modal .thank-you-modal-wrapper .thank-you-modal-title {
-      font-family: "Titillium Web", sans-serif;
-      font-size: 2rem;
-      color: #ffffff; }
-    .thank-you-modal .thank-you-modal-wrapper .thank-you-font {
-      font-family: "Roboto", sans-serif;
-      font-size: 1rem;
-      color: #ffffff; }
-    .thank-you-modal .thank-you-modal-wrapper .thank-you-button {
-      color: #fff;
-      text-decoration: none;
-      border: solid #fff 2px;
-      border-radius: 30px;
-      background-color: #70b3cb;
-      font-weight: 500;
-      font-size: 1.1rem;
-      transition: all ease 0.4s;
-      padding: 0.5rem 3rem;
-      margin: 1rem;
-      cursor: pointer; }
-      .thank-you-modal .thank-you-modal-wrapper .thank-you-button:hover {
-        color: #70b3cb;
-        border: solid #70b3cb 2px;
-        background-color: #fff; }
 
 .single-story-modal-overlay {
   display: none;
@@ -3124,8 +3050,7 @@ strong {
 
 .highlight-modal {
   text-align: center;
-  background: #70b3cb;
-  position: relative; }
+  background: #F9AC31; }
   .highlight-modal .highlight-modal-wrapper {
     display: -ms-flexbox;
     display: flex;
@@ -3136,10 +3061,9 @@ strong {
     -ms-flex-flow: column nowrap;
         flex-flow: column nowrap; }
     .highlight-modal .highlight-modal-wrapper .img-wrapper {
-      width: 100%;
+      width: 75%;
       height: 50%;
-      background: #70b3cb;
-      margin-top: 20px; }
+      background: white; }
       .highlight-modal .highlight-modal-wrapper .img-wrapper img {
         max-width: 500px;
         height: auto; }
@@ -3162,15 +3086,13 @@ strong {
       font-weight: 400;
       border: 3px solid white;
       border-width: 3px 0;
-      margin-bottom: 10px; }
+      margin-bottom: 0; }
     .highlight-modal .highlight-modal-wrapper p {
       color: #ffffff;
       font-family: "Roboto", sans-serif;
-      font-weight: 300;
-      line-height: 10px;
-      margin-bottom: 0;
-      font-size: 1.2rem;
-      letter-spacing: 1.5px; }
+      font-size: .75rem;
+      text-transform: capitalize;
+      margin: 1rem; }
     .highlight-modal .highlight-modal-wrapper .highlight-modal-button {
       color: #fff;
       text-decoration: none;
@@ -3210,7 +3132,7 @@ strong {
   .comment-modal .img-wrapper {
     width: 75%;
     height: 50%;
-    background: #70b3cb; }
+    background: white; }
     .comment-modal .img-wrapper img {
       max-width: 500px;
       display: block;
@@ -3396,7 +3318,44 @@ strong {
   background: white; }
 
 .thankyou-modal {
-  background: #444444; }
+  background: #ffffff; }
+  .thankyou-modal .thankyou-modal-wrapper {
+    display: -ms-flexbox;
+    display: flex;
+    -ms-flex-align: center;
+        align-items: center;
+    -ms-flex-pack: center;
+        justify-content: center;
+    width: 100%;
+    height: 100%;
+    -ms-flex-flow: column nowrap;
+        flex-flow: column nowrap; }
+    .thankyou-modal .thankyou-modal-wrapper img {
+      max-width: 50%; }
+    .thankyou-modal .thankyou-modal-wrapper .thank-you-modal-title {
+      font-family: "Titillium Web", sans-serif;
+      font-size: 2rem;
+      color: #ffffff; }
+    .thankyou-modal .thankyou-modal-wrapper .thank-you-font {
+      font-family: "Roboto", sans-serif;
+      font-size: 1rem;
+      color: #404040; }
+    .thankyou-modal .thankyou-modal-wrapper .thank-you-button {
+      color: #fff;
+      text-decoration: none;
+      border: solid #fff 2px;
+      border-radius: 30px;
+      background-color: #70b3cb;
+      font-weight: 500;
+      font-size: 1.1rem;
+      transition: all ease 0.4s;
+      padding: 0.5rem 3rem;
+      margin: 1rem;
+      cursor: pointer; }
+      .thankyou-modal .thankyou-modal-wrapper .thank-you-button:hover {
+        color: #70b3cb;
+        border: solid #70b3cb 2px;
+        background-color: #fff; }
 
 @media all and (min-width: 600px) {
   .unlock-download-modal, .start-download-modal, .thankyou-modal {
