--- a/themes/bix/sass/_modal.scss
+++ b/themes/bix/sass/_modal.scss
@@ -286,7 +286,8 @@
         }
     }
     .thankyou-modal {
-        background: #ffffff;
+        background: url(../../images/thank-you-image.png);
+        background-position: right;
           .thankyou-modal-wrapper {
             display: flex;
             align-items: center;
@@ -294,28 +295,28 @@
             width: 100%;
             height: 100%;
             flex-flow: column nowrap;
+            background: rgba(0,0,0,0.5);
 
-             img {
-               max-width: 50%;
-             }
-
-
-              .thank-you-modal-title {
+              h2 {
+                text-align: center;
+                color: white;
                 font-family: $font__header;
-                font-size: 2rem;
-                color: #ffffff;
+                font-size: 2.5rem;
+                font-weight: 400;
+                margin: 2rem;
               }
 
-             .thank-you-font {
-               font-family: $font__main;
-               font-size: 1rem;
-               color: $color__text-main;
+             p {
+                font-family: $font__header;
+                color: white;
+                font-size: 1.2rem;
+                margin: 0;
              }
 
              .thank-you-button {
                @include btn;
                padding: 0.5rem 3rem;
-               margin: 1rem;
+               margin: 2rem;
                cursor: pointer;
              }
         }
