--- a/themes/bix/sass/style.scss
+++ b/themes/bix/sass/style.scss
@@ -1,18 +1,19 @@
 /*!
-Theme Name: Bix Theme
+Theme Name: Bix 
 Theme URI: http://underscores.me/
-Author: Mark, Mac, Wong
+Author: Mark, Mac, Chris
 Author URI: http://www.redacademy.com
-Description: Custom WordPress Theme for Bix
+Description: Custom WordPress Theme for "The Bix Book"
 Version: 1.0.0
+Text Domain: bix
 License: GNU General Public License v2 or later
 License URI: http://www.gnu.org/licenses/gpl-2.0.html
-Tags:
+
 
 This theme, like WordPress, is licensed under the GPL.
 Use it to make something cool, have fun, and share what you've learned with others.
 
-RED Starter Theme is based on Underscores http://underscores.me/, (C) 2012-2015 Automattic, Inc.
+The Bix Book theme is based on Underscores http://underscores.me/, (C) 2012-2015 Automattic, Inc.
 Underscores is distributed under the terms of the GNU GPL v2 or later.
 
 Normalizing styles have been helped along thanks to the fine work of
