--- a/themes/bix/sass/_modal.scss
+++ b/themes/bix/sass/_modal.scss
@@ -180,8 +180,8 @@
         display: none;
         position: absolute;
         width: 95%;
-        height: 80%;
-        padding: 1rem;
+        height: 90%;
+        padding: 0.5rem;
         &-wrapper i.fa-close {
             position: absolute;
             top: 0;
@@ -190,7 +190,6 @@
             font-size: 1.5rem;
             &:hover {
                 cursor: pointer;
-                color: white;
                 transform: scale(1.3);
             }
         }
@@ -202,7 +201,7 @@
         padding: 0.5rem 3rem;
     }
     .unlock-download-modal{
-        background: $color__orange;
+        background: white;
         .unlock-download-modal-wrapper {
             display: flex;
             align-items: center;
@@ -213,7 +212,7 @@
         }
         h2 {
             text-align: center;
-            color: white;
+            color: $color__gray;
             font-family: $font__header;
             font-size: 2.5rem;
             font-weight: 400;
@@ -223,8 +222,9 @@
         }
         p {
             font-family: $font__header;
-            color: white;
+            color: $color__gray;
             font-size: 1.2rem;
+            text-align: center;
         }
         form {
             display: flex;
@@ -265,6 +265,7 @@
             margin-bottom: 0;
         }
         p {
+            text-align: center;
             font-family: $font__header;
             color: $color__gray;
             font-size: 1.2rem;
@@ -307,6 +308,7 @@
               }
 
              p {
+                text-align: center;
                 font-family: $font__header;
                 color: white;
                 font-size: 1.2rem;
@@ -318,6 +320,7 @@
                padding: 0.5rem 3rem;
                margin: 2rem;
                cursor: pointer;
+               text-align: center;
              }
         }
     }
@@ -325,5 +328,7 @@
     @media all and (min-width: 600px) {
         .unlock-download-modal, .start-download-modal, .thankyou-modal {
             width: 80%;
+            height: 80%;
+            padding: 1rem;
         }
     }
