--- a/themes/bix/style.css
+++ b/themes/bix/style.css
@@ -2347,7 +2347,8 @@ strong {
       padding: 10px 30px;
       display: block;
       text-align: center;
-      width: 230px; }
+      width: 230px;
+      cursor: pointer; }
       .book-purchase .book-purchase-info .btn-download:hover {
         color: #70b3cb;
         border: solid #70b3cb 2px;
@@ -3228,8 +3229,8 @@ strong {
   display: none;
   position: absolute;
   width: 95%;
-  height: 80%;
-  padding: 1rem; }
+  height: 90%;
+  padding: 0.5rem; }
   .unlock-download-modal-wrapper i.fa-close, .start-download-modal-wrapper i.fa-close, .thankyou-modal-wrapper i.fa-close {
     position: absolute;
     top: 0;
@@ -3238,7 +3239,6 @@ strong {
     font-size: 1.5rem; }
     .unlock-download-modal-wrapper i.fa-close:hover, .start-download-modal-wrapper i.fa-close:hover, .thankyou-modal-wrapper i.fa-close:hover {
       cursor: pointer;
-      color: white;
       transform: scale(1.3); }
 
 .download-later-button {
@@ -3258,7 +3258,7 @@ strong {
     background-color: #fff; }
 
 .unlock-download-modal {
-  background: #F9AC31; }
+  background: white; }
   .unlock-download-modal .unlock-download-modal-wrapper {
     display: -ms-flexbox;
     display: flex;
@@ -3272,7 +3272,7 @@ strong {
     height: 100%; }
   .unlock-download-modal h2 {
     text-align: center;
-    color: white;
+    color: #444444;
     font-family: "Titillium Web", sans-serif;
     font-size: 2.5rem;
     font-weight: 400;
@@ -3281,8 +3281,9 @@ strong {
     margin-bottom: 0; }
   .unlock-download-modal p {
     font-family: "Titillium Web", sans-serif;
-    color: white;
-    font-size: 1.2rem; }
+    color: #444444;
+    font-size: 1.2rem;
+    text-align: center; }
   .unlock-download-modal form {
     display: -ms-flexbox;
     display: flex;
@@ -3335,6 +3336,7 @@ strong {
     font-weight: 400;
     margin-bottom: 0; }
   .start-download-modal p {
+    text-align: center;
     font-family: "Titillium Web", sans-serif;
     color: #444444;
     font-size: 1.2rem; }
@@ -3385,6 +3387,7 @@ strong {
       font-weight: 400;
       margin: 2rem; }
     .thankyou-modal .thankyou-modal-wrapper p {
+      text-align: center;
       font-family: "Titillium Web", sans-serif;
       color: white;
       font-size: 1.2rem;
@@ -3400,7 +3403,8 @@ strong {
       transition: all ease 0.4s;
       padding: 0.5rem 3rem;
       margin: 2rem;
-      cursor: pointer; }
+      cursor: pointer;
+      text-align: center; }
       .thankyou-modal .thankyou-modal-wrapper .thank-you-button:hover {
         color: #70b3cb;
         border: solid #70b3cb 2px;
@@ -3408,4 +3412,6 @@ strong {
 
 @media all and (min-width: 600px) {
   .unlock-download-modal, .start-download-modal, .thankyou-modal {
-    width: 80%; } }
+    width: 80%;
+    height: 80%;
+    padding: 1rem; } }
