--- a/themes/bix/sass/_modal.scss
+++ b/themes/bix/sass/_modal.scss
@@ -199,16 +199,19 @@
         width: 95%;
         height: 90%;
         padding: 0.5rem;
-        &-wrapper i.fa-close {
-            position: absolute;
-            top: 0;
-            right: 0;
-            margin: 1rem;
-            font-size: 1.5rem;
-            &:hover {
-                cursor: pointer;
-                transform: scale(1.3);
-            }
+        &-wrapper {
+          position: relative;
+          i.fa-close {
+              position: absolute;
+              top: 0;
+              right: 0;
+              margin: 1rem;
+              font-size: 1.5rem;
+              &:hover {
+                  cursor: pointer;
+                  transform: scale(1.3);
+              }
+          }
         }
     }
 
