--- a/themes/bix/style.css
+++ b/themes/bix/style.css
@@ -3242,15 +3242,17 @@ strong {
   width: 95%;
   height: 90%;
   padding: 0.5rem; }
-  .unlock-download-modal-wrapper i.fa-close, .start-download-modal-wrapper i.fa-close, .thankyou-modal-wrapper i.fa-close {
-    position: absolute;
-    top: 0;
-    right: 0;
-    margin: 1rem;
-    font-size: 1.5rem; }
-    .unlock-download-modal-wrapper i.fa-close:hover, .start-download-modal-wrapper i.fa-close:hover, .thankyou-modal-wrapper i.fa-close:hover {
-      cursor: pointer;
-      transform: scale(1.3); }
+  .unlock-download-modal-wrapper, .start-download-modal-wrapper, .thankyou-modal-wrapper {
+    position: relative; }
+    .unlock-download-modal-wrapper i.fa-close, .start-download-modal-wrapper i.fa-close, .thankyou-modal-wrapper i.fa-close {
+      position: absolute;
+      top: 0;
+      right: 0;
+      margin: 1rem;
+      font-size: 1.5rem; }
+      .unlock-download-modal-wrapper i.fa-close:hover, .start-download-modal-wrapper i.fa-close:hover, .thankyou-modal-wrapper i.fa-close:hover {
+        cursor: pointer;
+        transform: scale(1.3); }
 
 .download-later-button {
   cursor: pointer;
