--- a/themes/bix/sass/_modal.scss
+++ b/themes/bix/sass/_modal.scss
@@ -190,14 +190,19 @@
     .bix-book-modal-container {
         height: 100%;
         width: 100%;
-        display: flex;
-        justify-content: center;
-        align-items: center;
+        // display: flex;
+        // justify-content: center;
+        // align-items: center;
         position: relative;
     }
     .unlock-download-modal, .start-download-modal, .thankyou-modal{
         display: none;
-        position: relative;
+        position: absolute;
+        top: 0;
+        bottom: 0;
+        left: 0;
+        right: 0;
+        margin: auto;
         width: 95%;
         height: 90%;
         padding: 0.5rem;
