--- a/themes/bix/sass/_about.scss
+++ b/themes/bix/sass/_about.scss
@@ -100,9 +100,8 @@ h3 {
 // company section
 
 	.company-section {
-		display: block;
 		width: 100%;
-		height: 100%;
+		height: auto;
 	}
 
 	.company-section-title {
@@ -189,6 +188,9 @@ h3 {
 		flex-flow: column nowrap;
 		align-items: center;
 		margin: 1rem 2rem;
+		width: 100%;
+		height: 230px;
+
 		h3 {
 			text-align: center;
 			font-family: $font__header;
