--- a/themes/bix/style.css
+++ b/themes/bix/style.css
@@ -1057,9 +1057,8 @@ strong {
       margin-bottom: 1rem; }
 
 .company-section {
-  display: block;
   width: 100%;
-  height: 100%; }
+  height: auto; }
 
 .company-section-title {
   position: relative;
@@ -1138,7 +1137,9 @@ strong {
       flex-flow: column nowrap;
   -ms-flex-align: center;
       align-items: center;
-  margin: 1rem 2rem; }
+  margin: 1rem 2rem;
+  width: 100%;
+  height: 230px; }
   .company-section-website h3 {
     text-align: center;
     font-family: "Titillium Web", sans-serif;
@@ -2887,10 +2888,11 @@ strong {
   max-width: 100%;
   text-align: center;
   overflow: hidden;
-  min-height: 0px; }
+  min-height: 450px; }
 
 .footer-wrapper {
-  position: relative; }
+  position: relative;
+  min-height: 450px; }
 
 .footer-top {
   margin-left: 10%;
