--- a/themes/bix/sass/_about.scss
+++ b/themes/bix/sass/_about.scss
@@ -52,7 +52,7 @@ h3 {
 			text-align: center;
 			font-family: $font__header;
 			color: $color__gray;
-			font-size: 1.5rem;
+			font-size: 1.8rem;
 			text-transform: uppercase;
 		}
 	}
@@ -188,7 +188,7 @@ h3 {
 		flex-flow: column nowrap;
 		align-items: center;
 		margin: 1rem 2rem;
-		width: 100%;
+		//width: 100%;
 		height: 230px;
 
 		h3 {
