--- a/themes/bix/style.css
+++ b/themes/bix/style.css
@@ -3055,7 +3055,8 @@ strong {
 
 .highlight-modal {
   text-align: center;
-  background: #70b3cb; }
+  background: #70b3cb;
+  position: relative; }
   .highlight-modal .highlight-modal-wrapper {
     display: -ms-flexbox;
     display: flex;
@@ -3118,7 +3119,8 @@ strong {
         background-color: #fff; }
 
 .comment-modal {
-  background: #70b3cb; }
+  background: #70b3cb;
+  position: relative; }
   .comment-modal .comment-modal-wrapper {
     display: -ms-flexbox;
     display: flex;
