--- a/themes/bix/sass/_modal.scss
+++ b/themes/bix/sass/_modal.scss
@@ -197,7 +197,7 @@
     }
     .unlock-download-modal, .start-download-modal, .thankyou-modal{
         display: none;
-        position: absolute;
+        position: relative;
         width: 95%;
         height: 90%;
         padding: 0.5rem;
