--- a/themes/bix/style.css
+++ b/themes/bix/style.css
@@ -3243,7 +3243,7 @@ strong {
 
 .unlock-download-modal, .start-download-modal, .thankyou-modal {
   display: none;
-  position: absolute;
+  position: relative;
   width: 95%;
   height: 90%;
   padding: 0.5rem; }
