padding/margin adjustments about page

--- a/themes/bix/sass/_about.scss
+++ b/themes/bix/sass/_about.scss
@@ -76,7 +76,7 @@ h3 {
 
 	.author-section-content-wrapper {
 		div {
-			margin: 0 2rem 1rem 2rem;
+			margin: 0;
 			h3 {
 				font-family: $font__header;
 				color: $color__orange;
@@ -128,7 +128,7 @@ h3 {
 
 	.company-section-content-wrapper {
 		div {
-			margin: 0 2rem 1rem 2rem;
+			margin: 0;
 			h3 {
 				font-family: $font__header;
 				color: $color__orange;
