--- a/themes/bix/sass/_about.scss
+++ b/themes/bix/sass/_about.scss
@@ -188,8 +188,8 @@ h3 {
 		flex-flow: column nowrap;
 		align-items: center;
 		margin: 1rem 2rem;
-		//width: 100%;
 		height: 230px;
+		margin-bottom: 50px;
 
 		h3 {
 			text-align: center;
