fix navbar disappearing on some button clicks

--- a/themes/bix/sass/_bix-book.scss
+++ b/themes/bix/sass/_bix-book.scss
@@ -238,7 +238,7 @@
       width: 230px;
     }
 
-		.btn-download{
+		.donate-later-button{
 			@include btn;
 			padding: 10px 30px;
 			display: block;
