img resizing for modal

--- a/themes/bix/style.css
+++ b/themes/bix/style.css
@@ -3385,7 +3385,7 @@ strong {
       background-color: #fff; }
 
 .thankyou-modal {
-  background: url(../../images/thank-you-image.png);
+  background: url(../../images/thank-you-image.jpg);
   background-position: right; }
   .thankyou-modal .thankyou-modal-wrapper {
     display: -ms-flexbox;
