--- a/themes/bix/sass/_modal.scss
+++ b/themes/bix/sass/_modal.scss
@@ -22,7 +22,7 @@
         position: absolute;
         width: 80%;
         height: 80%;
-        padding: 1rem;
+        padding: 1rem;    
     }
     //Highlight Modal
     .highlight-modal {
@@ -303,7 +303,7 @@
         }
     }
     .thankyou-modal {
-        background: url(../../images/thank-you-image.png);
+        background: url(../../images/thank-you-image.jpg);
         background-position: right;
         .thankyou-modal-wrapper {
             display: flex;
