--- a/themes/bix/sass/_modal.scss
+++ b/themes/bix/sass/_modal.scss
@@ -22,7 +22,22 @@
         position: absolute;
         width: 80%;
         height: 80%;
-        padding: 1rem;    
+        padding: 1rem;
+        &-wrapper {
+          position: relative;
+          i.single-fa-close {
+            color: white;
+              position: absolute;
+              top: 0;
+              right: 0;
+              margin: 1rem;
+              font-size: 1.5rem;
+              &:hover {
+                  cursor: pointer;
+                  transform: scale(1.3);
+              }
+          }
+        }
     }
     //Highlight Modal
     .highlight-modal {
@@ -198,7 +213,7 @@
         padding: 0.5rem;
         &-wrapper {
           position: relative;
-          i.fa-close {
+          i.download-fa-close {
               position: absolute;
               top: 0;
               right: 0;
@@ -393,7 +408,7 @@
   @media #{$tablet-desktop}{
     .highlight-modal, .comment-modal, .download-modal {
         width: 95%;
-        height: 80%;
+        height: 95%;
         h2 {
           font-size: 1.5rem;
         }
