add donation page and styling

--- a/themes/bix/sass/style.scss
+++ b/themes/bix/sass/style.scss
@@ -72,6 +72,7 @@ Nicolas Gallagher and Jonathan Neal http://necolas.github.com/normalize.css/
 @import "bix-book";
 @import "stories";
 @import "teaser-stories";
+@import "donate";
 @import "footer";
 @import "error-page";
 @import "modal";
